renamed IUnNamed stuff to IKeyless, added new LogWrappers, changed to java 1.8 compat, removed ThrowableConsumer.java, started documenting.